@@ -1,0 +1,10 @@
+class CfgPatches
+{
+	class CorePatch_Modules
+	{
+		requiredAddons[] = {"CorePatch"};
+		requiredVersion = 1.00;
+		units[] = {};
+		weapons[] = {};
+	};
+};
