@@ -930,7 +930,10 @@ class CfgVehicles
 	class StaticWeapon : LandVehicle
 	{
 		class AnimationSources;
-		class Turrets;
+		class Turrets
+		{
+			class MainTurret;
+		};
 	};
 	class StaticCanon : StaticWeapon
 	{
@@ -962,7 +965,10 @@ class CfgVehicles
 	{
 		class Turrets : Turrets
 		{
-			class MainTurret;
+			class MainTurret : MainTurret
+			{
+				class ViewOptics;
+			};
 		};
 	};
 	class AGS_base : StaticGrenadeLauncher
@@ -974,18 +980,18 @@ class CfgVehicles
 				discreteDistance[] = {100, 200, 300, 400, 500, 600, 700, 800, 900, 1000, 1100, 1200, 1300};
 				discreteDistanceInitIndex = 2;
 				turretInfoType = "RscWeaponZeroing";
+
+				class ViewOptics : ViewOptics
+				{
+					initFov = 0.1; // 2.5x
+					maxFov = 0.1;
+					minFov = 0.1;
+				};
 			};
 		};
 	};
 	class GMG_TriPod : StaticGrenadeLauncher
 	{
-		class Turrets : Turrets
-		{
-			class MainTurret : MainTurret
-			{
-				class ViewOptics;
-			};
-		};
 	};
 	class BAF_GMG_Tripod_D : GMG_TriPod
 	{
